{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "71c5eeac-e6b5-4c3a-b4c4-53c3b1f74327",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "d7b5d567-912a-46fe-9093-fc765480ad69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "0c4029b5-85be-4cf5-8c41-17d556b3154b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c2d9e670-300e-4fcb-80a2-bb3fde98eed3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpaceClick",
                    "type": "Button",
                    "id": "70204602-a2d0-43bd-a0ad-68e7ed7f70bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d06536e5-9f56-4015-a6e9-3eb5bca5dd5a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ec32e70-311d-4405-bb82-b0ef387ffefc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15269107-75ec-4877-b3dc-8e9c93f78505",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e698ee6-94d9-4b69-b1e4-03c0a1b71265",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}